# beta-credible

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: build-and-deploy.yaml
cli/: Cargo.toml
cli/src/: main.rs
stats/: Cargo.toml
stats/src/: lib.rs
web/: Cargo.toml  index.html
web/src/: main.rs
